fix filters' alignment

--- a/todo-app-main/src/sass/main.scss
+++ b/todo-app-main/src/sass/main.scss
@@ -175,7 +175,7 @@ p.lastitem > button {
     & > span {
       display: flex;
       justify-content: space-between;
-      width: 200px;
+      width: 220px;
     }
   }
 }
